--- a/home.html
+++ b/home.html
@@ -144,7 +144,7 @@ We firmly believe it is the combination of our people, machines and passion that
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="img/iso.png" alt="">
+                  <img src="img/iso.PNG" alt="">
                 </div>
 
               </div>
