--- a/home.html
+++ b/home.html
@@ -110,13 +110,14 @@ We firmly believe it is the combination of our people, machines and passion that
           </div>
 
           <div class="col-lg-6 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="200">
-            <img src="img/1.jpg" class="img-fluid" alt="" >
+            <img src="img/roads.jpg" class="img-fluid" alt="" >
           </div>
 
         </div>
       </div>
 
     </section><!-- End About Section -->
+  </main>
   <main id="main">
 
   
@@ -271,7 +272,7 @@ We are proud of our achievements and are committed to further enhancing our capa
     </section><!-- End Values Section -->
 
     <!-- ======= Counts Section ======= -->
-    <section id="counts" class="counts">
+  <!--   <section id="counts" class="counts">
       <div class="container" data-aos="fade-up">
 
         <div class="row gy-4">
@@ -319,7 +320,7 @@ We are proud of our achievements and are committed to further enhancing our capa
         </div>
 
       </div>
-    </section>
+    </section> -->
 
       <section id="services" class="features">
 
@@ -396,8 +397,8 @@ We are proud of our achievements and are committed to further enhancing our capa
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h2>Business Fields</h3>
-                     <p>Business Fields And Our Safety Policy</p>
+          <h2>Business </h2>
+                     <p>Our Business Fields </p>
 
         </header>
  <!-- / row -->
@@ -414,9 +415,9 @@ We are proud of our achievements and are committed to further enhancing our capa
               <li>
                 <a class="nav-link" data-bs-toggle="pill" href="#tab2">Trading And Transport</a>
               </li>
-              <li>
+            <!--   <li>
                 <a class="nav-link" data-bs-toggle="pill" href="#tab3">Safty</a>
-              </li>
+              </li> -->
             </ul><!-- End Tabs -->
 
             <!-- Tab Content -->
@@ -507,7 +508,7 @@ We are proud of our achievements and are committed to further enhancing our capa
 </h4>
                 </div>
               </div><!-- End Tab 2 Content -->
-
+<!-- 
               <div class="tab-pane fade show" id="tab3">
                 <p>SAFETY IS OUR NUMBER 1 PRIORITY!
 </p>
@@ -570,14 +571,14 @@ We are proud of our achievements and are committed to further enhancing our capa
 
 </h4>
                 </div>
-              </div><!-- End Tab 3 Content -->
+              </div> --><!-- End Tab 3 Content -->
 
             </div>
 
           </div>
 
           <div class="col-lg-6">
-            <img src="img/1234.png" class="img-fluid" alt="">
+            <img src="img/excavator.jpg" class="img-fluid" alt="">
           </div>
 
         </div><!-- End Feature Tabs -->
@@ -589,7 +590,97 @@ We are proud of our achievements and are committed to further enhancing our capa
 
     </section><!-- End Features Section -->
 
-   
+    <section id="safety" class="about" >
+
+      <div class="container" data-aos="fade-up">
+          <header class="section-header">
+          <h2>Safety Policy </h2>
+                     <p>SAFETY IS OUR NUMBER 1 PRIORITY! </p>
+
+        </header>
+        <div class="row gx-0">
+
+          <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
+            <div class="content" style="font-size: 10px">
+             
+              <p>
+                 <div class="d-flex align-items-center mb-2">
+                  <i class="bi bi-check2"></i>
+                  <h2>Our employees are our most valuable resource and no phase of business is of greater importance than their personal safety. 
+</h2>
+                </div>
+                  <div class="d-flex align-items-center mb-2">
+                  <i class="bi bi-check2"></i>
+                  <h4>Management and all employees have a primary responsibility for the safety and well-being of employees, contractors and visitors.
+
+</h4>
+                </div>
+                <div class="d-flex align-items-center mb-2">
+                  <i class="bi bi-check2"></i>
+                  <h2>Workplace risks can be minimized and exposures can be safeguarded
+
+</h2>
+                </div>
+                  <div class="d-flex align-items-center mb-2">
+                  <i class="bi bi-check2"></i>
+                  <h4> Effective communication is essential to achieving an accident-free workplace
+
+
+</h4>
+                </div>
+                   <div class="d-flex align-items-center mb-2">
+                  <i class="bi bi-check2"></i>
+                  <h2> Understanding the safety policy is a must for all employees, contractors and visitors.
+
+
+
+</h2>
+                </div>
+                   <div class="d-flex align-items-center mb-2">
+                  <i class="bi bi-check2"></i>
+                  <h4> Reporting and sharing near miss incidents is a key to improving safety
+
+
+
+</h4>
+                </div>
+                <div class="d-flex align-items-center mb-2">
+                  <i class="bi bi-check2"></i>
+                  <h2> Recognizing safe behavior fosters better understanding of our policies, philosophy and practices.
+
+
+
+
+</h2>
+                </div>
+                 <div class="d-flex align-items-center mb-2">
+                  <i class="bi bi-check2"></i>
+                  <h4> Promote workforce involvement, feedback  and Integrity
+
+
+
+
+
+</h4>
+                </div>
+              </p>
+              <!-- <div class="text-center text-lg-start">
+                <a href="#" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
+                  <span>Read More</span>
+                  <i class="bi bi-arrow-right"></i>
+                </a>
+              </div> -->
+            </div>
+          </div>
+
+          <div class="col-lg-6 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="200">
+            <img src="img/safet.jpg" class="img-fluid" alt="" >
+          </div>
+
+        </div>
+      </div>
+
+    </section>
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
