--- a/man_pip.html
+++ b/man_pip.html
@@ -134,7 +134,99 @@
 
       </div>
     </section>
+ <section id="services" class="services">
 
+      <div class="container" data-aos="fade-up">
+
+        <header class="section-header">
+          <h2>Why Almotawasetta ?</h2>
+          <p>Why you should use concrete  drainage ?</p>
+        </header>
+
+        <div class="row gy-4" >
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+            <div class="service-box blue">
+              <i class="ri-discuss-line icon"></i>
+              <h3>Sustainability</h3>
+              <p style="text-align: left;">Concrete pipes outperform other types of pipeline solutions in a number of the environmental impact categories such as human toxicity levels and chemical hazardous waste generated. The CO2 emission from concrete and cement production are relatively small compared to other building materials.</p>
+              <!-- <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+            <div class="service-box orange">
+              <i class="ri-discuss-line icon"></i>
+              <h3>Strength</h3>
+              <p style="text-align: left;">Concrete is much more durable than any kind of pipe.Hence, it can carry more load at any given time and gain strength over time.It can’t be weakened by heat,moisture, mould or pests,nor it will rust.Under ground Concrete Pipes have the ability to resist chemical attacks and massive impacts.</p>
+             <!--  <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
+            <div class="service-box green">
+              <i class="ri-discuss-line icon"></i>
+              <h3>Quality</h3>
+              <p style="text-align: left;">High quality reinforced and non reinforced pipes and manholes according to international standards ASTM.</p>
+            <!--   <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
+            <div class="service-box red">
+              <i class="ri-discuss-line icon"></i>
+              <h3>Whole life value</h3>
+              <p style="text-align: left;">Due to it’s amazing structural properties and functional benefits precast concrete pipes tend to attract lower insurance premiums than those built from other construction materials. The natural strength of precast Concrete Pipes enables recycled aggregate to be used in bedding materials,significantly reducing installation costs and the elimination of waste disposal costs.</p>
+            <!--   <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
+            <div class="service-box purple">
+              <i class="ri-discuss-line icon"></i>
+              <h3>Fire Resistance</h3>
+              <p style="text-align: left;">Concrete forms a highly effective barrier to fire spread and it doesn’t emit any toxic fumes when effected by fires. It will not produce smoke or drip molten particles .Therefore concrete can be described as virtually”fireproof”.Due to its in built fire resistance properties. Concrete not only maintains an air right construction that stops smoke spreading,but also has the ability to keep its strength during fire.</p>
+             <!--  <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="700">
+            <div class="service-box pink">
+              <i class="ri-discuss-line icon"></i>
+              <h3>Bedding performance</h3>
+              <p style="text-align: left;">The superior strengthof the concrete pipes enablesrecycled aggregate to be used as a bedding material, thus reducing costs and environmental empact during installation .</p>
+              <!-- <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
+            </div>
+          </div>
+           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="700">
+            <div class="service-box blue">
+              <i class="ri-discuss-line icon"></i>
+              <h3>Chemical Resistance</h3>
+              <p style="text-align: left;">Concrete Pipes and manholes are resistant to sulphate and chemical attack.</p>
+             <!--  <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
+            </div>
+          </div>
+ <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="700">
+            <div class="service-box orange">
+              <i class="ri-discuss-line icon"></i>
+              <h3 style="font-size: 21px">Thermal mass and Operational Energy Efficiency</h3>
+              <p style="text-align: left;">Heavy weight materials such as concrete  provide a high level of thermal mass , a useful property which helps to regulate the temperature within structures. It also has agood acoustic properties, which avoids the need  for acoustic insulation of pipes..</p>
+              <!-- <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
+            </div>
+          </div>
+           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="700">
+            <div class="service-box green">
+              <i class="ri-discuss-line icon"></i>
+              <h3>Conclusion !!!</h3>
+              <p style="text-align: left;">This factory was formed to manufacture and market high quality concrete pipe and manhole products and services for project in Lebanon and Middle East .It is equipped to manufacture reinforced and non reinforced concrete pipes and manholes.</p>
+              <!-- <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> -->
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+    </section>
   </main>
     <footer id="footer" class="footer">
 
