--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
           <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
        <li class="dropdown"><a href="#"><span>Our Factory</span> <i class="bi bi-chevron-down"></i></a>
            <ul>
-              <li><a href="man_pip.html">Pipes Manholes </a></li>
+              <li><a href="man_pip.html">Pipes And Manholes </a></li>
               <li><a href="man_batching.html">Batching Plant</a></li>
               <li><a href="man_asphalt.html">Asphalt Plant</a></li>
               <li><a href="man_crusher.html">Mobile Crusher</a></li>
@@ -62,7 +62,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center">
-          <h1 data-aos="fade-up">Al Motawasetta S.A.R.L for Trading and Contracting Company</h1>
+          <h1 data-aos="fade-up">Al Motawasetta for Trading and Contracting Company S.A.R.L</h1>
           <h2 data-aos="fade-up" data-aos-delay="400">Registration Number : <strong>4008260</strong></h2>
           <div data-aos="fade-up" data-aos-delay="600">
             <div class="text-center text-lg-start">
@@ -88,7 +88,7 @@
           <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
             <div class="content" style="font-size: 13px">
               <h3>Who We Are</h3>
-              <h2>Al Motawasetta L.L.C for Trading and Contracting Co. (Formally Al Houssam Trading and Contracting)</h2>
+              <h2>Al Motawasetta S.A.R.L for Trading and Contracting Co</h2>
               <p>
                  is a contracting company  based in Lebanon with a branch in Qatar (Medyar).
 
@@ -136,13 +136,11 @@ We firmly believe it is the combination of our people, machines and passion that
             <div class="portfolio-details-slider swiper-container">
               <div class="swiper-wrapper align-items-center">
 
-                <div class="swiper-slide">
+             <!--    <div class="swiper-slide">
                   <img src="img/profile.jpg" alt="">
                 </div>
-
-                <div class="swiper-slide">
-                  <img src="img/profile1.jpg" alt="">
-                </div>
+ -->
+            
 
                 <div class="swiper-slide">
                   <img src="img/iso.PNG" alt="">
@@ -164,7 +162,7 @@ We firmly believe it is the combination of our people, machines and passion that
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Brief About Al Moutwasseta By CEO</h2>
+              <h2>Brief About Al Motwasetta By CEO</h2>
               <p>
               From a modest beginning in 2007, to becoming a leading contractor in Lebanon, the emergence of Al Motawasetta evolved through a journey that has taken just over a decade of planning, hard work and dedication. This commitment has made Al Motawasetta a recognized brand for the successful delivery of numerous prestigious projects in the country . As we go above and beyond on every project and deliver on our promises with integrity .
 Al Motawasetta is firmly committed to Quality, Health, Safety and the Environment. We continue to invest in qualified talent and modern equipment to undertake large and complex projects , which require a combination of our activities and services to deliver the optimum result for our client depending on professionalism-passion ,team work ,experience and responsibility to deliver quality on time and safety protecting the environment. This enables us to achieve our goal of successfully delivering large-scale projects and expanding our operations into the region, where we hope to replicate our local success.
