--- a/man_pip.html
+++ b/man_pip.html
@@ -139,7 +139,7 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h2>Why Almotawasetta ?</h2>
+          <h2>Why  ?</h2>
           <p>Why you should use concrete  drainage ?</p>
         </header>
 
