--- a/man_pip.html
+++ b/man_pip.html
@@ -59,8 +59,9 @@
           <li><a class="nav-link scrollto" href="home.html#contact">Contact</a></li>
                     <li><a class="getstarted scrollto" href="#">AR</a></li>
                     <li>
-&nbsp;&nbsp;
-  <button type="button" class="btn btn-danger  " onclick="DownloadFile('CMD.pdf')" > Data Cheet Download</button>
+<!-- 
+  <button type="button" class="btn btn-danger" onclick="DownloadFile('CMD.pdf')" > Data Cheet Download</button> -->
+   <a href="gfgpdf.php?file=CMD" class="nav-link scrollto" style="color: red" >Data Cheet Download</a></center>
 </li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
