--- a/man_crusher.html
+++ b/man_crusher.html
@@ -38,8 +38,8 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
       <a href="home.html" class="logo d-flex align-items-center">
-<!--         <img src="img/logo.png" alt="">
- -->        <span>Al Motawasetta</span>
+ <img src="img/logo.png" alt="">
+       <!--  <span>Al Motawasetta</span> -->
       </a>
 
       <nav id="navbar" class="navbar">
