--- a/home.html
+++ b/home.html
@@ -55,9 +55,43 @@
 
     </div>
   </header><!-- End Header -->
-<br/><br/>
-  <!-- ======= Hero Section ======= -->
 
+  <!-- ======= Hero Section ======= -->
+  
+<br/><br/>
+<section id="" class="portfolio-details">
+      <div class="container">
+
+        <div class="row gy-12">
+
+          <div class="col-lg-12">
+            <div class="portfolio-details-slider swiper-container">
+              <div class="swiper-wrapper align-items-center">
+
+                <div class="swiper-slide" >
+                  <img src="img/back1.jpeg" alt="">
+                </div>
+
+            
+                <div class="swiper-slide" >
+                  <img src="img/back2.jpeg" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="img/back3.jpeg" alt="">
+                </div>
+
+              </div>
+              <div class="swiper-pagination"></div>
+            </div>
+          </div>
+
+          
+
+        </div>
+
+      </div>
+    </section>
   <section id="hero" class="hero d-flex align-items-center">
 
     <div class="container">
