--- a/man_batching.html
+++ b/man_batching.html
@@ -161,7 +161,15 @@ All the processes are carried out carefully, professionally and systematically w
 <!--               <img src="img/logo.png" alt="">
  -->              <span>Al Motawasetta</span>
             </a>
-            <p>PLEASE WRITE A BRIEF ABOUT ME</p>
+              <p>Let us know your needs 
+              <ul>
+              <li>Commited to superior  quality and results.</li>
+               <li>Broad vision .  Careful thought.</li>
+                <li>Our reputation is as solid as concrete</li>
+                 <li> Building your visions. Creating Reality .</li>
+                  <li> Put us to the test , we are better than the rest .</li>
+                   <li>Listen better. Plan better. Build better.</li>
+            </ul></p>
             <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
               <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
