--- a/man_pip.html
+++ b/man_pip.html
@@ -37,17 +37,17 @@
    <header id="header" class="header fixed-top">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
-      <a href="home.html" class="logo d-flex align-items-center">
+      <a href="index.html" class="logo d-flex align-items-center">
         <img src="img/logo.png" alt="">
        <!--  <span>Al Motawasetta</span> -->
       </a>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="home.html#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="home.html#about">About</a></li>
-          <li><a class="nav-link scrollto" href="home.html#services">Services</a></li>
-          <li><a class="nav-link scrollto" href="home.html#portfolio">Portfolio</a></li>
+          <li><a class="nav-link scrollto active" href="index.html#hero">Home</a></li>
+          <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
+          <li><a class="nav-link scrollto" href="index.html#services">Services</a></li>
+          <li><a class="nav-link scrollto" href="index.html#portfolio">Portfolio</a></li>
        <li class="dropdown"><a href="#"><span>Our Factory</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="man_pip.html">Pipes Manholes </a></li>
@@ -56,7 +56,7 @@
               <li><a href="man_crusher.html">Mobile Crusher</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="home.html#contact">Contact</a></li>
+          <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
                     <li><a class="getstarted scrollto" href="#">AR</a></li>
                     <li>
 <!-- 
@@ -278,11 +278,11 @@ The information contained within this brochure is available on our web site.
           <div class="col-lg-2 col-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="home.html#hero">Home</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="home.html#about">About </a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="home.html#services">Services</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="home.html#portfolio">Portfolio</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="home.html#contact">Contact</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="index.html#hero">Home</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="index.html#about">About </a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="index.html#services">Services</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="index.html#portfolio">Portfolio</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="index.html#contact">Contact</a></li>
             </ul>
           </div>
 
