--- a/home.html
+++ b/home.html
@@ -130,7 +130,7 @@
               <h3>Who We Are</h3>
               <h2>Al Motawasetta S.A.R.L for Trading and Contracting Co</h2>
               <p>
-                 is a contracting company  based in Lebanon with a branch in Qatar (Medyar).
+                 is a contracting company  based in Bekaa Lebanon.
 
 The company is registered in Lebanon as grade 1 contracting company specialized in infrastructure works with a successful story  from 2007 up to date. In that period Al Motawasetta succeeded in leaving an impressive footprint in the Lebanese contracting market as well in the region.
 
@@ -688,7 +688,7 @@ We are proud of our achievements and are committed to further enhancing our capa
               <li data-filter=".filter-road">Roads And Landfill</li>
               <li data-filter=".filter-elect">Electricity</li>
               <li data-filter=".filter-lake">Lakes</li>
-              <li data-filter=".filter-constraction">Constractions</li>
+              <li data-filter=".filter-constraction">Constructions</li>
                <li data-filter=".filter-network">Networks</li>
                 <li data-filter=".filter-pipes">Pipes</li>
 
@@ -1180,10 +1180,10 @@ We are proud of our achievements and are committed to further enhancing our capa
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-lake">
             <div class="portfolio-wrap">
-              <img src="img/ps/15.jpg" class="img-fluid" alt="">
+              <img src="img/ps/15.JPG" class="img-fluid" alt="">
               <div class="portfolio-info"> 
                 <div class="portfolio-links">
-                  <a href="img/ps/15.jpg" data-gallery="portfolioGallery" class="portfokio-lightbox" ><i class="bi bi-plus"></i></a>
+                  <a href="img/ps/15.JPG" data-gallery="portfolioGallery" class="portfokio-lightbox" ><i class="bi bi-plus"></i></a>
                 </div>
               </div>
             </div>
