--- a/index.html
+++ b/index.html
@@ -74,9 +74,7 @@
  <div class="swiper-slide" >
                   <img src="img/back4.jpg" alt="">
                 </div>
-                <div class="swiper-slide" >
-                  <img src="img/back1.jpeg" alt="">
-                </div>
+              
                <div class="swiper-slide" >
                   <img src="img/back6.jpg" alt="">
                 </div>
@@ -86,6 +84,9 @@
 
                 <div class="swiper-slide">
                   <img src="img/back3.jpeg" alt="">
+                </div>
+                  <div class="swiper-slide" >
+                  <img src="img/back1.jpeg" alt="">
                 </div>
 
               </div>
@@ -303,15 +304,15 @@ We are proud of our achievements and are committed to further enhancing our capa
                    <p>
                 <ul>
                 <li style="text-align: left;">
-              We believe that our development is strongly related to the development of our human resources through training.
+         Build a legacy of excellence
 
                </li>
                <li style="text-align: left;">
-               We are committed to quality, safety and preserving the environment .
+               Constant improvement  of the quality of executed works ,business efficiency ,environmental protection ,occupational health and safety and meeting the requirements of the employers.
 
               </li>
               <li style="text-align: left;">
-                We promote an environment of competitiveness amongst our employees to promote their sense of leadership and team working 
+              Provide our customers with valued construction solutions using our expertise in the design ,manufacture and installation of building components.
 
 
               </li>
@@ -570,7 +571,7 @@ We are proud of our achievements and are committed to further enhancing our capa
           </div>
 
           <div class="col-lg-6">
-            <img src="img/excavator.jpg" class="img-fluid" alt="">
+            <img src="img/cat.jpeg" class="img-fluid" alt="">
           </div>
 
         </div><!-- End Feature Tabs -->
@@ -686,7 +687,7 @@ We are proud of our achievements and are committed to further enhancing our capa
               <li data-filter=".filter-road">Roads And Landfill</li>
               <li data-filter=".filter-elect">Electricity</li>
               <li data-filter=".filter-lake">Lakes</li>
-              <li data-filter=".filter-constraction">Constractions</li>
+              <li data-filter=".filter-constraction">Construction</li>
                <li data-filter=".filter-network">Networks</li>
                 <li data-filter=".filter-pipes">Pipes</li>
 
