--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </div>
                 
  <div class="swiper-slide" >
-                  <img src="img/back4.jpg" alt="">
+                  <img src="img/back7.jpg" alt="">
                 </div>
               
                <div class="swiper-slide" >
@@ -385,8 +385,8 @@ We are proud of our achievements and are committed to further enhancing our capa
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h2>Services</h2>
-          <p>PLEASE WRITE A BRIEF ABOUT SERVICES</p>
+<!--           <h2>Services</h2>
+ -->          <p>Our Services</p>
         </header>
 
         <div class="row">
