--- a/index.html
+++ b/index.html
@@ -559,12 +559,12 @@ We are proud of our achievements and are committed to further enhancing our capa
 
 </h4>
                 </div>
-                  <div class="d-flex align-items-center mb-2">
+                 <!--  <div class="d-flex align-items-center mb-2">
                   <i class="bi bi-check2"></i>
                   <h4>Supply and install glass
 
 </h4>
-                </div>
+                </div> -->
               </div>
             </div>
 
@@ -1409,14 +1409,15 @@ We are proud of our achievements and are committed to further enhancing our capa
             </ul>
           </div>
 
-          <div class="col-lg-2 col-6 footer-links">
+           <div class="col-lg-2 col-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Emergency Services.</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Remodeling</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">General Transport</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Trading & Transport</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Industrial and civil structures.</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="#">Construction Management</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Rehabilitation Services</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">General Transport</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Contracting</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">infrastructure Networks</a></li>
 
             </ul>
           </div>
