--- a/man_asphalt.html
+++ b/man_asphalt.html
@@ -168,11 +168,12 @@ We trust to have been at your service and respond quickly to customer’s need.
           <div class="col-lg-2 col-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Emergency Services.</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Remodeling</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">General Transport</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Trading & Transport</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Industrial and civil structures.</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="#">Construction Management</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Rehabilitation Services</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">General Transport</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Contracting</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">infrastructure Networks</a></li>
 
             </ul>
           </div>
