--- a/man_pip.html
+++ b/man_pip.html
@@ -61,7 +61,7 @@
                     <li>
 <!-- 
   <button type="button" class="btn btn-danger" onclick="DownloadFile('CMD.pdf')" > Data Cheet Download</button> -->
-  <!--  <a href="gfgpdf.php?file=CMD" class="nav-link scrollto" style="color: red" > Download</a></center> -->
+   <a href="gfgpdf.php?file=CMD" class="nav-link scrollto" style="color: red" > Download</a></center>
 </li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
