--- a/index.html
+++ b/index.html
@@ -1004,7 +1004,7 @@ We are proud of our achievements and are committed to further enhancing our capa
               </div>
             </div>
           </div>
-           <div class="col-lg-4 col-md-6 portfolio-item filter-network">
+          <!--  <div class="col-lg-4 col-md-6 portfolio-item filter-network">
             <div class="portfolio-wrap">
               <img src="img/ps/6.jpg" class="img-fluid" alt="">
               <div class="portfolio-info"> 
@@ -1013,7 +1013,7 @@ We are proud of our achievements and are committed to further enhancing our capa
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-network">
             <div class="portfolio-wrap">
               <img src="img/ps/4.jpg" class="img-fluid" alt="">
